# aws-demo

./: .gitignore
boto/: s3.py  sqs.py
cdk/cdk_workshop/: requirements.txt
cdk/cdk_workshop/cdk_workshop/: cdk_workshop_stack.py  hitcounter.py
cdk/cdk_workshop/lambda/: hello.py  hitcount.py
cdk/cdkworkshop/: setup.py
cdk/cdkworkshop/cdkworkshop/: cdkworkshop_stack.py  hitcounter.py
cdk/cdkworkshop/lambda/: hello.py  hitcount.py
cdk/dbt_demo/: pyproject.toml
cdk/dbt_demo/tests/: test_dbt_demo.py
cdk/hello-cdk/hello_cdk/: hello_cdk_stack.py
glue/: movies.py
glue/terraform/: environments.tf  glue.tf  s3.tf
lakeformation/: template.yml
lambda/helloworld/: app.py
lambda/helloworld/chalicelib/: api.py  events.py
lambda/ping/: serverless.yml
lambda/sam/csharp-demo/: README.md  samconfig.toml  template.yaml
lambda/sam/csharp-demo/.aws-sam/: build.toml
lambda/sam/echo-app/: README.md  samconfig.toml  template.yaml
lambda/sam/echo-app/.aws-sam/: build.toml
lambda/sam/echo-app/hello_world/: app.py
lambda/sam/event-app/: README.md  template.yaml
lambda/sam/event-app/.aws-sam/: build.toml
lambda/sam/trader/: README.md  samconfig.toml  template.yaml
lambda/sam/trader/.aws-sam/: build.toml
lambda/serverless/ping/: handler.py
lambda/serverless/sqs-worker/: handler.py  package.json  serverless.yml
lambda/simple_terraform/echo/lambda/: handler.py
lambda/simple_terraform/echo/terraform/: lambda.tf  step_functions.tf  vars.tf
lambda/sqs-worker/: package-lock.json
terraform/: configs.tf  environments.tf  glue.tf  s3.tf
(+1 files in other folders)
