[tool.poetry]
name = "dbt_demo"
version = "0.1.0"
description = ""
authors = ["VasuBalakrishnan <nbvasu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.54"
aws-cdk-lib = "^2.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
